--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "plugins": ["@typescript-eslint"],
     "rules": {
         "semi": "off",
-        "@typescript-eslint/explicit-function-return-type": "error",
+        "@typescript-eslint/explicit-function-return-type": "warn",
         "@typescript-eslint/semi": [
             "warn"
         ],
